CSS fix for the broken UI in safari browsers

--- a/network-graphs-visualization-portlet/src/main/webapp/css/overrides.css
+++ b/network-graphs-visualization-portlet/src/main/webapp/css/overrides.css
@@ -181,3 +181,7 @@ input#standard-bare{
 .App-style header {
     z-index:999;
 }
+
+body #content {
+    overflow: auto !important;
+}
